other-vpol/restrict-binding-clusteradmin/.kyverno-test-exceptions/resource.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata: {name: badrb02, namespace: policy-exceptions}
roleRef: {apiGroup: rbac.authorization.k8s.io, kind: ClusterRole, name: cluster-admin}
subjects: [{kind: ServiceAccount, name: app, namespace: policy-exceptions}]
