other-vpol/restrict-binding-clusteradmin/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata: {name: clusteradmin-binding-exceptions}
policies: [../restrict-binding-clusteradmin.yaml]
resources: [resource.yaml]
exceptions: [../.kyverno-test/exceptions.yaml]
results:
- isValidatingPolicy: true
  kind: RoleBinding
  policy: restrict-binding-clusteradmin
  resources: [policy-exceptions/badrb02]
  result: pass
